--- a/templates/index.html
+++ b/templates/index.html
@@ -9,23 +9,26 @@
 <body>
     <div class="container">
         <header>
-            <h1><i class="fas fa-brain"></i> KnowledgeTree</h1>
-            <p>The Context-Aware Knowledge Graph</p>
+            <h1><i class="fas fa-sitemap"></i> KnowledgeTree</h1>
+            <nav id="breadcrumb"></nav>
         </header>
-        <main>
-            <div id="file-manager">
+        <main id="file-browser-container">
+            <div id="file-browser">
                 </div>
-            <div class="actions">
-                <h3>Create New</h3>
-                <input type="text" id="new-node-name" placeholder="Name for new item...">
-                <div class="options">
-                    <button id="add-article-btn"><i class="fas fa-file-alt"></i> New Article</button>
-                    <button id="add-folder-btn"><i class="fas fa-folder"></i> New Folder</button>
-                </div>
-                 <p class="note">Select a folder on the left to add items inside it.</p>
-            </div>
         </main>
     </div>
+
+    <div id="context-menu" class="context-menu">
+        <ul>
+            <li id="context-open"><i class="fas fa-folder-open"></i> Open</li>
+            <li id="context-rename"><i class="fas fa-edit"></i> Rename</li>
+            <li id="context-delete"><i class="fas fa-trash"></i> Delete</li>
+            <hr>
+            <li id="context-new-folder"><i class="fas fa-folder-plus"></i> New Folder</li>
+            <li id="context-new-article"><i class="fas fa-file-medical"></i> New Knowledge</li>
+        </ul>
+    </div>
+
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
 </body>
 </html>
