--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,7 @@
             <li id="context-delete"><i class="fas fa-trash"></i> Delete</li>
             <hr>
             <li id="context-new-folder"><i class="fas fa-folder-plus"></i> New Folder</li>
+            <li id="context-new-attached"><i class="fas fa-paperclip"></i> New Attached Folder</li>
             <li id="context-new-article"><i class="fas fa-file-medical"></i> New Knowledge</li>
         </ul>
     </div>
