--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,10 @@
     <div class="container">
         <header>
             <h1><i class="fas fa-sitemap"></i> KnowledgeTree</h1>
-            <nav id="breadcrumb"></nav>
+            <div class="nav-bar">
+                <button id="back-btn" title="Go back"><i class="fas fa-arrow-left"></i></button>
+                <nav id="breadcrumb"></nav>
+            </div>
         </header>
         <main id="file-browser-container">
             <div id="file-browser">
