--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>KnowledgeTree - Context Graph</title>
+    <title>KnowledgeTree</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -32,6 +32,10 @@
             <li id="context-new-article"><i class="fas fa-file-medical"></i> New Knowledge</li>
         </ul>
     </div>
+
+    <footer>
+        <a href="/admin" class="admin-link">Admin Panel</a>
+    </footer>
 
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
 </body>
