--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,8 @@
             <div class="nav-bar">
                 <button id="back-btn" title="Go back"><i class="fas fa-arrow-left"></i></button>
                 <nav id="breadcrumb"></nav>
+                <input type="search" id="search-input" placeholder="Search from here down..." autocomplete="off" />
+                <div id="search-results" style="display: none;"></div>
             </div>
         </header>
         <main id="file-browser-container">
