--- a/templates/view.html
+++ b/templates/view.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container view-container">
         <header class="view-header">
-            <a href="/" class="back-link"><i class="fas fa-arrow-left"></i> Back to KnowledgeTree</a>
+            <a href="javascript:history.back()" class="back-link"><i class="fas fa-arrow-left"></i> Back</a>
             <h1 id="node-name">Loading...</h1>
             <button id="export-context-btn"><i class="fas fa-copy"></i> Export Full Context</button>
         </header>
