--- a/templates/admin.html
+++ b/templates/admin.html
@@ -55,6 +55,11 @@
                 <p>Manually trigger data sync jobs. View the console for logs.</p>
                 <button id="run-freshservice" class="button"><i class="fas fa-sync"></i> Run Freshservice Sync</button>
                 <button id="run-datto" class="button"><i class="fas fa-sync"></i> Run Datto RMM Sync</button>
+                <div style="margin-top: 1rem;">
+                    <button id="run-freshtickets" class="button"><i class="fas fa-sync"></i> Run Freshservice Ticket Sync</button>
+                    <input type="checkbox" id="overwrite-tickets-checkbox" style="margin-left: 10px;">
+                    <label for="overwrite-tickets-checkbox">Overwrite existing tickets</label>
+                </div>
             </div>
 
             <a href="/" class="back-link-admin"><i class="fas fa-arrow-left"></i> Back to KnowledgeTree</a>
